Bump global waybar font-size to 1rem, fix icon clipping

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -7,7 +7,7 @@
   box-shadow: none;
   color: white;
   font-family: "PlemolJP Console NF", "JetBrains Mono", sans-serif;
-  font-size: .75rem;
+  font-size: 1rem;
   letter-spacing: 0;
   margin: 0;
   min-height: 0;
@@ -111,8 +111,9 @@ menuitem:last-child {
 #disk,
 #memory {
   color: white;
-  font-size: .6rem;
-  min-width: 0.4rem;
+  font-size: 1rem;
+  min-width: 1.2rem;
+  padding: 2px;
   min-height: 0.4rem;
 }
 /* Red = take action */
